# scalping_optionperks

./: .env.example  .env.production.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  scalpdesk build prompt.md
backend/: .dockerignore  Dockerfile  constraints.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_instruments.py  003_instrument_pk.py  004_enctoken_auth.py  005_multi_broker.py
backend/app/: __init__.py  config.py  db.py  main.py  scheduler.py  worker.py
backend/app/auth/: crypto.py  jwt.py
backend/app/broker/: base.py  broker_info.py  constants.py  enctoken_client.py  enctoken_login.py  factory.py  index_symbols.py  instruments_sync.py  kite_client.py  ltp_fetch.py  ltp_poller.py  registry.py  session.py  ticker.py  ticker_service.py  totp_login.py  zerodha_ws.py
backend/app/broker/angel/: __init__.py  adapter.py
backend/app/broker/fyers/: __init__.py  adapter.py
backend/app/broker/kotak/: __init__.py  adapter.py
backend/app/broker/ventura/: __init__.py  adapter.py
backend/app/broker/zerodha/: __init__.py  adapter.py
backend/app/engine/: execution.py  fleet.py  indicators.py  manage.py  pipeline.py  risk.py  runtime.py  sizing.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: accounts.py  auth.py  charts.py  instruments.py  strategies.py  ticks.py  ws.py
backend/app/schemas/: __init__.py
backend/scripts/: seed.py  sync_instruments.py
backend/tests/: test_multi_broker.py
deploy/: CLOUDFLARE.md  Caddyfile  GITHUB.md  deploy.sh  (+6 more)
(+45 files in other folders)
