[project]
name = "scalpdesk"
version = "0.1.0"
description = "Aladin scalping platform — multi-broker index trading"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "cryptography>=43.0.0",
    "kiteconnect>=5.0.1",
    "apscheduler>=3.10.4",
    "httpx>=0.28.0",
    "pyotp>=2.9.0",
    "websockets>=12.0,<14.0",
    "numpy>=2.1.0",
    "python-multipart>=0.0.17",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
